# HPC-Disease-Simulation-Project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  disease_details.csv  disease_details_run_1.csv  disease_details_run_2.csv  disease_details_run_3.csv  disease_in.ini  disease_simulation  disease_stats.csv  disease_stats_run_0.csv  disease_stats_run_1.csv  disease_stats_run_2.csv  herdimm.csv  main.cpp  plot.gp  plott.gp  simulation  simulation.cpp  simulation.h  single_population_results.csv  test  test.cpp
